@@ -8,6 +8,7 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.config.Customizer;
+import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
@@ -26,6 +27,7 @@ import java.util.List;
 @Configuration
 //@EnableMethodSecurity
 @RequiredArgsConstructor
+@EnableGlobalMethodSecurity(prePostEnabled = true)
 @EnableWebSecurity
 @EnableWebMvc
 public class WebSecurityConfig {
@@ -43,14 +45,14 @@ public class WebSecurityConfig {
                                     String.format("%s/users/register",apiPrefix),
                                     String.format("%s/users/login",apiPrefix)
                                     ).permitAll()
-//                                    .requestMatchers(HttpMethod.GET,String.format("%s/roles/**",apiPrefix)).hasAnyRole(Role.USER,Role.ADMIN)
+                                    .requestMatchers(HttpMethod.GET,String.format("%s/product/**",apiPrefix)).permitAll()
                                     .requestMatchers(HttpMethod.GET,String.format("%s/category/**",apiPrefix)).permitAll()
                                     .requestMatchers(HttpMethod.POST,String.format("%s/category/**",apiPrefix)).hasAnyRole(Role.ADMIN)
                                     .requestMatchers(HttpMethod.PUT,String.format("%s/category/**",apiPrefix)).hasAnyRole(Role.ADMIN)
                                     .requestMatchers(HttpMethod.DELETE,String.format("%s/category/**",apiPrefix)).hasAnyRole(Role.ADMIN)
 
                                     .requestMatchers(HttpMethod.GET,String.format("%s/roles",apiPrefix)).permitAll()
-                                    .requestMatchers(HttpMethod.GET,String.format("%s/product/**",apiPrefix)).permitAll()
+
                                     .requestMatchers(HttpMethod.GET,String.format("%s/product/{name}/**",apiPrefix)).permitAll()
                                     .requestMatchers(HttpMethod.GET,String.format("%s/product/images/*",apiPrefix)).permitAll()
                                     .requestMatchers(HttpMethod.POST,String.format("%s/product/**",apiPrefix)).hasAnyRole(Role.ADMIN)
@@ -58,28 +60,36 @@ public class WebSecurityConfig {
                                     .requestMatchers(HttpMethod.DELETE,String.format("%s/product/**",apiPrefix)).hasAnyRole(Role.ADMIN)
 
                                     .requestMatchers(HttpMethod.POST,String.format("%s/orders/**",apiPrefix)).hasAnyRole(Role.USER)
-                                    .requestMatchers(HttpMethod.GET,String.format("%s/orders/**",apiPrefix)).hasAnyRole(Role.USER,Role.ADMIN)
+                                    .requestMatchers(HttpMethod.GET,String.format("%s/orders/**",apiPrefix)).permitAll()
                                     .requestMatchers(HttpMethod.DELETE,String.format("%s/orders/**",apiPrefix)).hasRole(Role.ADMIN)
                                     .requestMatchers(HttpMethod.PUT,String.format("%s/orders/**",apiPrefix)).hasRole(Role.ADMIN)
+//                                    .requestMatchers(HttpMethod.GET,String.format("%s/orders/get-orders-by-keyword",apiPrefix)).hasRole(Role.ADMIN)
 
                                     .requestMatchers(HttpMethod.POST,String.format("%s/order_details/**",apiPrefix)).hasAnyRole(Role.USER)
                                     .requestMatchers(HttpMethod.GET,String.format("%s/order_details/**",apiPrefix)).hasAnyRole(Role.USER,Role.ADMIN)
                                     .requestMatchers(HttpMethod.DELETE,String.format("%s/order_details/**",apiPrefix)).hasRole(Role.ADMIN)
                                     .requestMatchers(HttpMethod.PUT,String.format("%s/order_details/**",apiPrefix)).hasRole(Role.ADMIN)
+
+                                    .requestMatchers(HttpMethod.POST,String.format("%s/users/details/**",apiPrefix)).hasAnyRole(Role.USER,Role.ADMIN)
+                                    .requestMatchers(HttpMethod.GET,String.format("%s/users/userId/**",apiPrefix)).hasAnyRole(Role.USER,Role.ADMIN)
                                     .anyRequest().authenticated();
                 })
-                .csrf(AbstractHttpConfigurer::disable);
-
-        http.cors(cors -> cors
-                .configurationSource(request -> {
-                    CorsConfiguration corsConfiguration = new CorsConfiguration();
-                    corsConfiguration.setAllowedOrigins(List.of("*"));
-                    corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-                    corsConfiguration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Auth-Token"));
-                    return corsConfiguration;
-                })
+                .csrf(AbstractHttpConfigurer::disable)
+                .cors(cors -> cors
+                    .configurationSource(request -> {
+                        CorsConfiguration corsConfiguration = new CorsConfiguration();
+                        corsConfiguration.setAllowedOrigins(List.of("*"));
+                        corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+                        corsConfiguration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Auth-Token","Params"));
+                        return corsConfiguration;
+                    })
         );
-        //                http.cors(new Customizer<CorsConfigurer<HttpSecurity>>() {
+
+        return http.build();
+    }
+}
+//                                    .requestMatchers(HttpMethod.GET,String.format("%s/roles/**",apiPrefix)).hasAnyRole(Role.USER,Role.ADMIN)
+//                http.cors(new Customizer<CorsConfigurer<HttpSecurity>>() {
 //                    @Override
 //                    public void customize(CorsConfigurer<HttpSecurity> httpSecurityCorsConfigurer) {
 //                        CorsConfiguration configuration = new CorsConfiguration();
@@ -92,7 +102,6 @@ public class WebSecurityConfig {
 //                        httpSecurityCorsConfigurer.configurationSource(source);
 //                    }
 //                });
+//                                    .requestMatchers(HttpMethod.GET,String.format("%s/product/by-ids/**",apiPrefix)).hasAnyRole(Role.USER,Role.ADMIN)
 
-        return http.build();
-    }
-}
+//                                    .requestMatchers(HttpMethod.GET,String.format("%s/orders/**",apiPrefix)).hasAnyRole(Role.USER,Role.ADMIN)
